--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     
     <!--Favicon-->
     <link rel="shortcut icon" type="image/png" href="images/fav.png"/>
-    <title>React App</title>
+    <title>TweetChain</title>
   <link rel="shortcut icon" href="favicon.ico"><link rel="shortcut icon" href="favicon.ico"><link rel="shortcut icon" href="favicon.ico"><link rel="shortcut icon" href="/favicon.ico"></head>
   <body>
     <noscript>
