--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <!--Favicon-->
     <link rel="shortcut icon" type="image/png" href="images/fav.png"/>
     <title>TweetChain</title>
-  <link rel="shortcut icon" href="favicon.ico"><link rel="shortcut icon" href="favicon.ico"><link rel="shortcut icon" href="favicon.ico"><link rel="shortcut icon" href="/favicon.ico"></head>
+  <link rel="shortcut icon" href="favicon.ico"><link rel="shortcut icon" href="favicon.ico"><link rel="shortcut icon" href="favicon.ico"><link rel="shortcut icon" href="/favicon.ico"><link rel="shortcut icon" href="/favicon.ico"></head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
@@ -35,4 +35,5 @@
     <script src="js/jquery.sticky-kit.min.js"></script>
     <script src="js/jquery.scrollbar.min.js"></script>
     <script src="js/script.js"></script>
+    <script type="text/javascript" src="/bundle.js"></script>
 </html>
